--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walkey - 데이터베이스 테스트</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="Content-Security-Policy"
+          content="script-src 'self' 'unsafe-inline' dapi.kakao.com *.kakao.com t1.daumcdn.net;">
+
 </head>
 
 <body>
@@ -58,7 +61,9 @@
         </footer>
     </div>
 
+    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=&autoload=false"></script>
     <script src="js/app.js"></script>
+
     <!-- 카카오맵 API -->
     <!-- 카카오맵 API: js/app.js에서 동적으로 로드됨 -->
 
