--- a/public/index.html
+++ b/public/index.html
@@ -1,64 +1,79 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Walkey - 데이터베이스 테스트</title>
-    <link rel="stylesheet" href="css/style.css">
-    <meta http-equiv="Content-Security-Policy"
-          content="script-src 'self' 'unsafe-inline' dapi.kakao.com *.kakao.com t1.daumcdn.net;">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="container">
-        <header>
-            <h1>🚶 Walkey 데이터베이스 테스트</h1>
-            <p>산책로 추천 서비스 - 데이터베이스 연결 테스트 페이지</p>
-        </header>
+      <header>
+        <h1>🚶 Walkey 데이터베이스 테스트</h1>
+        <p>산책로 추천 서비스 - 데이터베이스 연결 테스트 페이지</p>
+      </header>
 
-        <main>
-            <!-- 연결 테스트 섹션 -->
-            <section class="test-section">
-                <h2>데이터베이스 연결 테스트</h2>
-                <button onclick="testConnection()" class="btn btn-primary">연결 테스트</button>
-                <div id="connection-result" class="result-box"></div>
-            </section>
+      <main>
+        <!-- 연결 테스트 섹션 -->
+        <section class="test-section">
+          <h2>데이터베이스 연결 테스트</h2>
+          <button onclick="testConnection()" class="btn btn-primary">
+            연결 테스트
+          </button>
+          <div id="connection-result" class="result-box"></div>
+        </section>
 
-            <!-- 테이블 목록 섹션 -->
-            <section class="test-section">
-                <h2>테이블 목록 조회</h2>
-                <button onclick="getTables()" class="btn btn-secondary">테이블 조회</button>
-                <div id="tables-result" class="result-box"></div>
-            </section>
+        <!-- 테이블 목록 섹션 -->
+        <section class="test-section">
+          <h2>테이블 목록 조회</h2>
+          <button onclick="getTables()" class="btn btn-secondary">
+            테이블 조회
+          </button>
+          <div id="tables-result" class="result-box"></div>
+        </section>
 
-            <!-- 데이터 조회 섹션 -->
-            <section class="test-section">
-                <h2>데이터 조회</h2>
-                <div class="button-group">
-                    <button onclick="getData('users')" class="btn">사용자</button>
-                    <button onclick="getData('themes')" class="btn">테마</button>
-                    <button onclick="getData('routes')" class="btn">산책 루트</button>
-                    <button onclick="getData('sessions')" class="btn">산책 세션</button>
-                    <button onclick="getData('posts')" class="btn">커뮤니티 게시글</button>
-                </div>
-                <div id="data-result" class="result-box"></div>
-            </section>
+        <!-- 데이터 조회 섹션 -->
+        <section class="test-section">
+          <h2>데이터 조회</h2>
+          <div class="button-group">
+            <button onclick="getData('users')" class="btn">사용자</button>
+            <button onclick="getData('themes')" class="btn">테마</button>
+            <button onclick="getData('routes')" class="btn">산책 루트</button>
+            <button onclick="getData('sessions')" class="btn">산책 세션</button>
+            <button onclick="getData('posts')" class="btn">
+              커뮤니티 게시글
+            </button>
+          </div>
+          <div id="data-result" class="result-box"></div>
+        </section>
 
-            <!-- 카카오맵 테스트 섹션 -->
-            <section class="test-section">
-                <h2>카카오맵 API 테스트</h2>
-                <div id="map" style="width:100%;height:400px;"></div>
-                <p class="info-text">
-                    ℹ️ 카카오맵이 정상적으로 표시되면 API 키가 올바르게 설정된 것입니다. (기본 위치: 서울 시청)
-                </p>
-            </section>
-        </main>
+        <!-- 카카오맵 테스트 섹션 -->
+        <section class="test-section">
+          <h2>카카오맵 API 테스트</h2>
+          <div id="map" style="width: 100%; height: 400px"></div>
+          <p class="info-text">
+            ℹ️ 카카오맵이 정상적으로 표시되면 API 키가 올바르게 설정된 것입니다.
+            (기본 위치: 서울 시청)
+          </p>
+        </section>
 
-        <footer>
-            <p>Walkey Backend API - Database Test Page</p>
-        </footer>
+        <!-- 소셜 로그인 테스트 섹션 -->
+        <section class="test-section">
+          <h2>소셜 로그인 테스트</h2>
+          <button
+            onClick="location.href='https://github.com/login/oauth/authorize?client_id=Ov23li1UwRcARwdj1Tg3&scope=read:user,user:email'"
+            class="btn btn-primary"
+          >
+            Github 로그인
+          </button>
+          <div id="connection-result" class="result-box"></div>
+        </section>
+      </main>
+
+      <footer>
+        <p>Walkey Backend API - Database Test Page</p>
+      </footer>
     </div>
 
     <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=&autoload=false"></script>
@@ -66,7 +81,5 @@
 
     <!-- 카카오맵 API -->
     <!-- 카카오맵 API: js/app.js에서 동적으로 로드됨 -->
-
-</body>
-
+  </body>
 </html>
