WAL-59 add: github 소셜 로그인 UI 추가

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
         <section class="test-section">
           <h2>소셜 로그인 테스트</h2>
           <button
-            onClick="location.href='https://github.com/login/oauth/authorize?client_id=Ov23li1UwRcARwdj1Tg3&scope=read:user,user:email'"
+            onClick="location.href='https://github.com/login/oauth/authorize?client_id=Ov23li1UwRcARwdj1Tg3&scope=user:email user:name user:login'"
             class="btn btn-primary"
           >
             Github 로그인
