WAL-59 add: 구글 로그인 버튼 추가

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,12 @@
           >
             Github 로그인
           </button>
+          <button
+            onClick="location.href='https://accounts.google.com/o/oauth2/v2/auth?response_type=code&scope=profile&redirect_uri=http://localhost:3000/api/auth/google/signin&client_id=341604219706-jntqmhhvd9snjl41qhn4lnf72urqjpbm.apps.googleusercontent.com'"
+            class="btn btn-primary"
+          >
+            Google 로그인
+          </button>
           <div id="connection-result" class="result-box"></div>
         </section>
       </main>
