WAL-69 update: 네이버 소셜로그인 중간 커밋
- naver controller 추가
- naver routes 추가
- dotenv 위치 server.ts로 위치 이동
-> dotenv는 앱 시작 시점에 로드 되어야 하는데 routes에 둘 경우 너무 늦게 로드되게 됨.

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,12 @@
           >
             Google 로그인
           </button>
+          <button
+                  onClick="location.href='https://nid.naver.com/oauth2.0/authorize?response_type=code&client_id=TzoOc5tcBQzqBUxH72SC&state=test&redirect_uri=http://localhost:3000/api/auth/login/naver'"
+                  class="btn btn-primary"
+          >
+            Naver 로그인
+          </button>
           <div id="connection-result" class="result-box"></div>
         </section>
       </main>
