--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
             Google 로그인
           </button>
           <button
-                  onClick="location.href='https://nid.naver.com/oauth2.0/authorize?response_type=code&client_id=TzoOc5tcBQzqBUxH72SC&state=test&redirect_uri=http://localhost:3000/api/auth/login/naver'"
+                  onClick="naverLogin()"
                   class="btn btn-primary"
           >
             Naver 로그인
