--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,14 @@
           >
             Google 로그인
           </button>
+
+          <button
+            onClick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=8b28978d8eeed4d06669155739914409&redirect_uri=http://localhost:3000/api/auth/login/kakao&response_type=code'"
+            class="btn btn-primary"
+          >
+            kakao 로그인
+          </button>
+
           <div id="connection-result" class="result-box"></div>
         </section>
       </main>
