WAL-77 fix: minor fixes

--- a/public/index.html
+++ b/public/index.html
@@ -61,13 +61,13 @@
         <!-- 소셜 로그인 테스트 섹션 -->
         <section class="test-section">
           <h2>소셜 로그인 테스트</h2>
-          <button onClick="githubLogin()" class="btn btn-primary">
+          <button onClick="githubSignin()" class="btn btn-primary">
             Github 로그인
           </button>
-          <button onClick="googleLogin()" class="btn btn-primary">
+          <button onClick="googleSignin()" class="btn btn-primary">
             Google 로그인
           </button>
-          <button onClick="naverLogin()" class="btn btn-primary">
+          <button onClick="naverSignin()" class="btn btn-primary">
             Naver 로그인
           </button>
           <div id="connection-result" class="result-box"></div>
