WAL-77 add: 카카오 소셜 로그인 버튼 추가

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,9 @@
           <button onClick="naverSignin()" class="btn btn-primary">
             Naver 로그인
           </button>
+          <button onClick="kakaoSignin()" class="btn btn-primary">
+            Kakao 로그인
+          </button>
           <div id="connection-result" class="result-box"></div>
         </section>
       </main>
